# CSES-7309

./: CMakeCache.txt  CMakeConfigureLog.yaml  CMakeDirectoryInformation.cmake  CMakeLists.txt  Config.h  LogParser.cpp  LogParser.h  Makefile  Makefile.cmake  OllamaClient.cpp  OllamaClient.h  README.md  ReportGenerator.cpp  ReportGenerator.h  Sample_Logs.txt  TargetDirectories.txt  Types.h  cmake_install.cmake  logsummarizer  main.cpp
